<resources>
    <string name="app_name">Quick ‘n’ Easy: Magic the Gathering</string>
    <string name="general_rule_title">General</string>
    <string name="game_concepts">Game Concepts</string>
    <string name="quick_review_concepts">Quick Review Concepts</string>
    <string name="quick_start_title">Getting Started</string>
    <string name="more">More</string>
    <string name="button_cards">Cards</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="quick_review_part_1">
        \t\t
        To start the game, shuffle your deck,also known as your library. Draw a hand of seven cards and check to see how many lands you have.
        \n\n\t\t
        You can look at the line of text just below a card’s art to see what type of card it is. For this first game, if you don’t have at least two land cards, reshuffle your deck (including your old hand) and draw a new hand.
        \n\n\t\t
        You and your opponent each start with 20 life, and you’ll each need a way to track your life total (such as dice or a pencil and paper). Reduce your opponent’s life total to 0 and you win the game!
    </string>
    <string name="general_header_1">100. General</string>
    <string name="general_header_2">101. The Magic Golden Rules</string>
    <string name="general_header_3">102. Players</string>
    <string name="general_header_4">103. Starting the Game</string>
    <string name="general_header_5">104. Ending the Game</string>
    <string name="general_header_6">105. Colors</string>
    <string name="general_header_7">106. Mana</string>
    <string name="general_header_8">107. Numbers and Symbols</string>
    <string name="general_header_9">108. Cards</string>
    <string name="general_header_10">109. Objects</string>
    <string name="general_header_11">110. Permanents</string>
    <string name="general_header_12">111. Tokens</string>
    <string name="general_header_13">112. Spells</string>
    <string name="general_header_14">113. Abilities</string>
    <string name="general_header_15">114. Emblems</string>
    <string name="general_header_16">115. Targets</string>
    <string name="general_header_17">116. Special Actions</string>
    <string name="general_header_18">117. Timing and Priority</string>
    <string name="general_header_19">118. Costs</string>
    <string name="general_header_20">119. Life</string>
    <string name="general_header_21">120. Damage</string>
    <string name="general_header_22">121. Drawing a Card</string>
    <string name="general_header_23">122. Counters</string>
    <string name="general_header_24">123. Stickers</string>
    <string name="general_rules_part_1">
        \t\t
        100.1. These Magic rules apply to any Magic game with two or more players, including two-player games and multiplayer games.
        \n\n\t\t
        100.1a A two-player game is a game that begins with only two players.
        \n\n\t\t
        100.1b A multiplayer game is a game that begins with more than two players. See section 8, “Multiplayer Rules.”
        \n\n\t\t
        100.2. To play, each player needs their own deck of traditional Magic cards, small items to represent any tokens and counters, and some way to clearly track life totals.
        \n\n\t\t
        100.2a In constructed play (a way of playing in which each player creates their own deck ahead of time), each deck has a minimum deck size of 60 cards. A constructed deck may contain any number of basic land cards and no more than four of any card with a particular English name other than basic land cards. For the purposes of deck construction, cards with interchangeable names have the same English name (see rule 201.3).
        \n\n\t\t
        100.2b In limited play (a way of playing in which each player gets the same quantity of unopened Magic product such as booster packs and creates their own deck using only this product and basic land cards), each deck has a minimum deck size of 40 cards. A limited deck may contain as many duplicates of a card as are included with the product.
        \n\n\t\t
        100.2c Commander decks are subject to additional deckbuilding restrictions and requirements. See rule 903, “Commander,” for details.
        \n\n\t\t
        100.2d Some formats and casual play variants allow players to use a supplementary deck of nontraditional Magic cards (see rule 108.2a). These supplementary decks have their own deck construction rules. See rule 718, “Attraction Cards;” rule 901, “Planechase;” and rule 904, “Archenemy.”
        \n\n\t\t
        100.3. Some cards require coins or traditional dice. Some casual variants require additional items, such as specially designated cards, nontraditional Magic cards, and specialized dice.
        \n\n\t\t
        100.4. Each player may also have a sideboard, which is a group of additional cards the player may use to modify their deck between games of a match.
        \n\n\t\t
        100.4a In constructed play, a sideboard may contain no more than fifteen cards. The four-card limit (see rule 100.2a) applies to the combined deck and sideboard.
        \n\n\t\t
        100.4b In limited play involving individual players, all cards in a player’s card pool not included in their deck are in that player’s sideboard.
        \n\n\t\t
        100.4c In limited play involving the Two-Headed Giant multiplayer variant, all cards in a team’s card pool but not in either player’s deck are in that team’s sideboard.
        \n\n\t\t
        100.4d In limited play involving other multiplayer team variants, each card in a team’s card pool but not in any player’s deck is assigned to the sideboard of one of those players. Each player has their own sideboard; cards may not be transferred between players.
        \n\n\t\t
        100.5. If a deck must contain at least a certain number of cards, that number is referred to as a minimum deck size. There is no maximum deck size for non-Commander decks.
        \n\n\t\t
        100.6. Most Magic tournaments (organized play activities where players compete against other players to win prizes) have additional rules covered in the Magic: The Gathering Tournament Rules (found at <a href="http://wpn.wizards.com/en/resources/rules-documents">WPN.Wizards.com/en/resources/rules-documents</a>). These rules may limit the use of some cards, including barring all cards from some older sets.
        \n\n\t\t
        100.6a Tournaments usually consist of a series of matches. A two-player match usually involves playing until one player has won two games. A multiplayer match usually consists of only one game.
        \n\n\t\t
        100.6b Players can use the Magic Store &amp; Event Locator at <a href="http://www.wizards.com/locator">Wizards.com/Locator</a> to find tournaments in their area.
        \n\n\t\t
        100.7. Certain cards are intended for casual play and may have features and text that aren’t covered by these rules. These include Mystery Booster playtest cards, promotional cards and cards in “Un-sets” that were printed with a silver border, and cards in the Unfinity™ expansion that have an acorn symbol at the bottom of the card.
    </string>
    <string name="general_rules_part_2">
        \t\t
        101.1. Whenever a card’s text directly contradicts these rules, the card takes precedence. The card overrides only the rule that applies to that specific situation. The only exception is that a player can concede the game at any time (see rule 104.3a).
        \n\n\t\t
        101.2. When a rule or effect allows or directs something to happen, and another effect states that it can’t happen, the “can’t” effect takes precedence.
        \t\tExample If one effect reads “You may play an additional land this turn” and another reads “You can’t play lands this turn,” the effect that precludes you from playing lands wins.
        \n\n\t\t
        101.2a Adding abilities to objects and removing abilities from objects don’t fall under this rule. (See rule 113.10.)
        \n\n\t\t
        101.3. Any part of an instruction that’s impossible to perform is ignored. (In many cases the card will specify consequences for this; if it doesn’t, there’s no effect.)
        \n\n\t\t
        101.4. If multiple players would make choices and/or take actions at the same time, the active player (the player whose turn it is) makes any choices required, then the next player in turn order (usually the player seated to the active player’s left) makes any choices required, followed by the remaining nonactive players in turn order. Then the actions happen simultaneously. This rule is often referred to as the “Active Player, Nonactive Player (APNAP) order” rule.
        \t\tExample A card reads “Each player sacrifices a creature.” First, the active player chooses a creature they control. Then each of the nonactive players, in turn order, chooses a creature they control. Then all creatures chosen this way are sacrificed simultaneously.
        \n\n\t\t
        101.4a If an effect has each player choose a card in a hidden zone, such as their hand or library, those cards may remain face down as they’re chosen. However, each player must clearly indicate which face-down card they are choosing.
        \n\n\t\t
        101.4b A player knows the choices made by the previous players when making their choice, except as specified in 101.4a.
        \n\n\t\t
        101.4c If a player would make more than one choice at the same time, the player makes the choices in the order specified. If no order is specified, the player chooses the order.
        \n\n\t\t
        101.4d If a choice made by a nonactive player causes the active player, or a different nonactive player earlier in the turn order, to have to make a choice, APNAP order is restarted for all outstanding choices.
        \n\n\t\t
        101.4e If multiple players would make choices or take actions while starting the game, the starting player is considered the active player and each other player is considered a nonactive player.
    </string>
    <string name="general_rules_part_3">
        \t\t
        102.1. A player is one of the people in the game. The active player is the player whose turn it is. The other players are nonactive players.
        \n\n\t\t
        102.2. In a two-player game, a player’s opponent is the other player.
        \n\n\t\t
        102.3. In a multiplayer game between teams, a player’s teammates are the other players on their team, and the player’s opponents are all players not on their team.
        \n\n\t\t
        102.4. A spell or ability may use the term “your team” as shorthand for “you and/or your teammates.” In a game that isn’t a multiplayer game between teams, “your team” means the same thing as “you.”
    </string>
    <string name="back">Back</string>
    <string name="page_1">Page: 1</string>
    <string name="Empty"></string>
</resources>