<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blacklotus"
    tools:context=".RuleBookGeneral">
    <!-- make scroll view clickable rather than a button clickable=true -->
    <ScrollView
        android:id="@+id/general_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/general_header_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#99000000"
                android:padding="5dp"
                android:text="@string/general_header_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/general_page_count_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="#99000000"
                android:padding="5dp"
                android:text="@string/page_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/concept_general_textView"
                app:layout_constraintTop_toTopOf="@+id/general_header_textView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxHeight="100dp"
                android:minHeight="48dp"
                android:prompt="@string/Empty"
                app:layout_constraintBottom_toBottomOf="@id/general_page_count_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/general_page_count_textView"
                app:layout_constraintTop_toTopOf="@id/general_page_count_textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/concept_general_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="#99000000"
                android:linksClickable="true"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/general_rules_part_1"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/general_header_textView" />

            <Button
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/more"
                app:layout_constraintEnd_toStartOf="@id/btnCards"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toBottomOf="@id/concept_general_textView" />

            <Button
                android:id="@+id/btnCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_cards"
                app:layout_constraintEnd_toEndOf="@+id/concept_general_textView"
                app:layout_constraintTop_toBottomOf="@+id/concept_general_textView" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="@id/concept_general_textView"
                app:layout_constraintTop_toBottomOf="@+id/concept_general_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>